[package]
name = "pgb1"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basics"
path = "examples/basics.rs"
required-features = ["critical-section-impl"]

[dependencies]
display-interface-spi = "0.4.1"
embedded-graphics-core = "0.4.0"
ssd1306 = "0.8.4"
smart-leds = "0.3.0"

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true

[dependencies.fugit]
version = "0.3.7"

[dependencies.rp2040-boot2]
version = "0.3.0"
optional = true

[dependencies.rp2040-hal]
version = "0.10.0"

[dependencies.usb-device]
version = "0.3"

[dependencies.embedded-hal]
version = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.ws2812-pio]
version = "0.8.0"

[dependencies.critical-section]
version = "1.0.0"
optional = true

[dev-dependencies.cortex-m-rtic]
version = "1.1.4"

[dev-dependencies.defmt]
version = "0.3.5"

[dev-dependencies.defmt-rtt]
version = "0.4.0"

[dev-dependencies.embedded-graphics]
version = "0.8.0"

[dev-dependencies.embedded-hal-nb]
version = "1.0.0"

[dev-dependencies.embedded-sdmmc]
version = "0.5.0"

[dev-dependencies.hd44780-driver]
version = "0.4.0"

[dev-dependencies.heapless]
version = "0.7.16"

[dev-dependencies.i2c-pio]
version = "0.8.0"

[dev-dependencies.nb]
version = "1.1"

[dev-dependencies.panic-halt]
version = "0.2.0"

[dev-dependencies.pio]
version = "0.2.1"

[dev-dependencies.pio-proc]
version = "0.2.2"

[dev-dependencies.rp2040-hal]
version = "0.10.0"
features = ["defmt"]

[dev-dependencies.smart-leds]
version = "0.3.0"

[dev-dependencies.usbd-hid]
version = "0.7.0"

[dev-dependencies.usbd-serial]
version = "0.2.1"

[dev-dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[features]
default = [
    "boot2",
    "rt",
    "critical-section-impl",
    "rom-func-cache",
]
boot2 = ["rp2040-boot2"]
critical-section-impl = ["rp2040-hal/critical-section-impl", "dep:critical-section"]
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]
rom-func-cache = ["rp2040-hal/rom-func-cache"]
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
rp2040-e5 = ["rp2040-hal/rp2040-e5"]
rt = [
    "cortex-m-rt",
    "rp2040-hal/rt",
]
