[package]
name = "pgb1"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface-spi = "0.4.1"
ssd1306 = "0.8.4"
smart-leds = "0.3.0"

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true

[dependencies.fugit]
version = "0.3.7"

[dependencies.rp2040-boot2]
version = "0.3.0"
optional = true

[dependencies.rp2040-hal]
version = "0.10.0"

[dependencies.usb-device]
version = "0.3"

[dependencies.embedded-hal]
version = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.ws2812-pio]
version = "0.8.0"

[dependencies.critical-section]
version = "1.0.0"
optional = true

[features]
default = [
    "boot2",
    "rt",
    "critical-section-impl",
    "rom-func-cache",
]
boot2 = ["rp2040-boot2"]
critical-section-impl = ["rp2040-hal/critical-section-impl", "dep:critical-section"]
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]
rom-func-cache = ["rp2040-hal/rom-func-cache"]
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
rp2040-e5 = ["rp2040-hal/rp2040-e5"]
rt = [
    "cortex-m-rt",
    "rp2040-hal/rt",
]
