[package]
edition = "2021"
name = "pgb1-basics"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
pgb1 = { version = "*", path = "../../", features = ["critical-section-impl"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8.0"
rp2040-hal = "*"
smart-leds = "0.3.0"
# embedded-snake = "0.0.2"
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
rand_core = "*"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
